--- a/notebooks/motor_de_ingesta.ipynb
+++ b/notebooks/motor_de_ingesta.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "3646a49cbd56248b",
    "metadata": {},
    "outputs": [],
@@ -44,21 +44,6 @@
     "\n",
     "from databricks.connect import DatabricksSession\n",
     "spark = DatabricksSession.builder.getOrCreate()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "09055141",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "datasource = \"retail-org\"\n",
-    "dataset = \"sales_orders\"\n",
-    "\n",
-    "df = spark.read.json(f\"/databricks-datasets/{datasource}/{dataset}/\")\n",
-    "\n",
-    "df.printSchema()"
    ]
   },
   {
@@ -80,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -105,6 +90,7 @@
    ],
    "source": [
     "format = \"json\"\n",
+    "databricks = False\n",
     "\n",
     "account = spark.conf.get(\"adls.account.name\")\n",
     "\n",
@@ -133,26 +119,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "b18b58e4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "LandingStreamReader.__init__() missing 1 required positional argument: 'spark'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mbatch_ingestion\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdatasource\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdataset\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlanding_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mraw_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbronze_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mformat\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mC:\\MASTER\\Diseno de ingestas y lagos de datos\\Tarea\\Motor de ingesta\\MotorIngesta\\batch_ingestion.py:178\u001b[39m, in \u001b[36mbatch_ingestion\u001b[39m\u001b[34m(datasource, dataset, landing_path, raw_path, bronze_path, format)\u001b[39m\n\u001b[32m    169\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mbatch_ingestion\u001b[39m(datasource, dataset, landing_path, raw_path, bronze_path, \u001b[38;5;28mformat\u001b[39m):\n\u001b[32m    171\u001b[39m     reader = (\u001b[43mLandingStreamReader\u001b[49m\u001b[43m.\u001b[49m\u001b[43mBuilder\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m          \u001b[49m\n\u001b[32m    172\u001b[39m \u001b[43m    \u001b[49m\u001b[43m.\u001b[49m\u001b[43mset_datasource\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdatasource\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    173\u001b[39m \u001b[43m    \u001b[49m\u001b[43m.\u001b[49m\u001b[43mset_dataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdataset\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    174\u001b[39m \u001b[43m    \u001b[49m\u001b[43m.\u001b[49m\u001b[43mset_landing_path\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlanding_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    175\u001b[39m \u001b[43m    \u001b[49m\u001b[43m.\u001b[49m\u001b[43mset_raw_path\u001b[49m\u001b[43m(\u001b[49m\u001b[43mraw_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    176\u001b[39m \u001b[43m    \u001b[49m\u001b[43m.\u001b[49m\u001b[43mset_bronze_path\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbronze_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    177\u001b[39m \u001b[43m    \u001b[49m\u001b[43m.\u001b[49m\u001b[43mset_format\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mformat\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m--> \u001b[39m\u001b[32m178\u001b[39m \u001b[43m    \u001b[49m\u001b[43m.\u001b[49m\u001b[43mbuild\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    179\u001b[39m     )\n\u001b[32m    180\u001b[39m     \u001b[38;5;28mprint\u001b[39m(reader)\n\u001b[32m    181\u001b[39m     writer = (BronzeStreamWriter.Builder()\n\u001b[32m    182\u001b[39m     .set_datasource(datasource)\n\u001b[32m    183\u001b[39m     .set_dataset(dataset)\n\u001b[32m   (...)\u001b[39m\u001b[32m    187\u001b[39m     .build()\n\u001b[32m    188\u001b[39m     )\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mC:\\MASTER\\Diseno de ingestas y lagos de datos\\Tarea\\Motor de ingesta\\MotorIngesta\\batch_ingestion.py:87\u001b[39m, in \u001b[36mLandingStreamReader.Builder.build\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m     86\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mbuild\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m---> \u001b[39m\u001b[32m87\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mLandingStreamReader\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mTypeError\u001b[39m: LandingStreamReader.__init__() missing 1 required positional argument: 'spark'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LandingStreamReader(datasource='retail',dataset='sales_orders')\n",
+      "BronzeStreamWriter(datasource='retail',dataset='sales_orders')\n"
      ]
     }
    ],
    "source": [
-    "batch_ingestion(datasource, dataset, landing_path, raw_path, bronze_path, format, spark)"
+    "batch_ingestion(datasource, dataset, landing_path, raw_path, bronze_path, format, spark, dbutils)"
    ]
   }
  ],
