Correcciones de git ignore, se agrega funcion para streaming

--- a/notebooks/motor_de_ingesta.ipynb
+++ b/notebooks/motor_de_ingesta.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "3646a49cbd56248b",
    "metadata": {},
    "outputs": [],
@@ -47,6 +47,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "38201010",
+   "metadata": {},
+   "source": [
+    "#### Import para el proyecto"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "ac49a70b",
@@ -55,17 +63,45 @@
    "source": [
     "import sys\n",
     "import os\n",
+    "import json\n",
+    "from confluent_kafka.schema_registry import SchemaRegistryClient\n",
     "\n",
-    "# Agrega el directorio al sys.path\n",
-    "sys.path.append(os.path.abspath(\"C:/MASTER/Diseno de ingestas y lagos de datos/Tarea/Motor de ingesta\"))\n",
-    "\n",
-    "# Ahora puedes importar el módulo\n",
-    "from MotorIngesta.batch_ingestion import batch_ingestion"
+    "from MotorIngesta.batch_ingestion import batch_ingestion\n",
+    "from MotorIngesta.streaming_ingestion import streaming_ingestion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b94e3de2",
+   "metadata": {},
+   "source": [
+    "#### Archivo de configuración, lectura:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3aef60a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_config(file_path):\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        config = json.load(file)\n",
+    "    return config"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36672c0d",
+   "metadata": {},
+   "source": [
+    "## Ingesta de datos batch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -90,7 +126,6 @@
    ],
    "source": [
     "format = \"json\"\n",
-    "databricks = False\n",
     "\n",
     "account = spark.conf.get(\"adls.account.name\")\n",
     "\n",
@@ -134,6 +169,57 @@
    ],
    "source": [
     "batch_ingestion(datasource, dataset, landing_path, raw_path, bronze_path, format, spark, dbutils)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "938e3064",
+   "metadata": {},
+   "source": [
+    "## Ingesta de datos desde Kafka"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8662de4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "topic = \"mobile_client\"\n",
+    "datasource = \"mobile_client_events\"\n",
+    "dataset = topic\n",
+    "\n",
+    "dataset_landing_path = f\"{landing_path}/{datasource}/{dataset}\"\n",
+    "dataset_raw_path =  f\"{raw_path}/{datasource}/{dataset}\"\n",
+    "dataset_bronze_path = f\"{bronze_path}/{datasource}/{dataset}\"\n",
+    "dataset_bronze_checkpoint_path = f\"{bronze_path}/{datasource}/{dataset}_checkpoint\"\n",
+    "table_name = f\"hive_metastore.bronze.{datasource}_{dataset}\"\n",
+    "\n",
+    "config_dict = read_config('config.json')\n",
+    "print(config_dict)\n",
+    "\n",
+    "schema_registry_url = config_dict[\"schema_registry_url\"]\n",
+    "schema_registry_username = config_dict[\"schema_registry_username\"]\n",
+    "schema_registry_password = config_dict[\"schema_registry_password\"]\n",
+    "\n",
+    "schema_registry_conf = {'url': schema_registry_url,\n",
+    "                        'basic.auth.user.info' : f'{schema_registry_username}:{schema_registry_password}'}\n",
+    "schema_registry_client = SchemaRegistryClient(schema_registry_conf)\n",
+    "\n",
+    "print(dataset_landing_path)\n",
+    "print(dataset_raw_path)\n",
+    "print(dataset_bronze_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f103771",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "streaming_ingestion(topic, dataset_bronze_path, dataset_bronze_checkpoint_path, table_name, spark, schema_registry_client)"
    ]
   }
  ],
